--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,59 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+body,
+html {
+  height: 100%;
+  margin: 0;
+}
+
+.body-wrapper {
+  background-color: #c9ccd5;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.clock-wrapper {
+  position: absolute;
+  width: 30vh;
+  height: 30vh;
+  background-color: #ffe3e3;
+  border-radius: 50%;
+  border: solid 0.1em black;
+}
+
+.hand {
+  top: 50%;
+  left: 50%;
+  height: 40%;
+  width: 0.7vh;
+  background-color: #93b5c6;
+  border: solid black 0.5px;
+  position: absolute;
+  -webkit-transform-origin: top;
+          transform-origin: top;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.clock-hour {
+  width: 0.6vh;
+  height: 30%;
+  z-index: 3;
+}
+
+.clock-min {
+  z-index: 2;
+}
+
+.clock-sec {
+  width: 0.1vh;
+  z-index: 1;
+}
+/*# sourceMappingURL=style.css.map */
